2007-03-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm.man: Fixed all warnings due to use of now deprecated
	* comm_wire.man: commands. Added a section about how to give
	  feedback.

2006-11-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm.tcl (commRunHook): Fixed double execution of the hook
	  script. Thanks to Will Duquette for the report.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-19  Andreas Kupries <andreask@activestate.com>

	* pkgIndex.tcl: Bumped to version 4.4. changes were extension
	* comm.tcl:     of the existing API.
	* comm.man:

2006-09-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm_wire.man: Clarified the use of the TCP port in the initial
	  message a bit more, i.e. the meaning of the special value '0'.

	* comm.tcl: The rewrite of the hook handling broken the promised
	* comm.man: semantics. Fixed. Also extended the handling of a
	  configured -interp to deal with a variety of possibilities
	  regarding missing or hidden commands. Updated the documentation.

	* pkgIndex.tcl:  Bumped to version 4.3.2

2006-08-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm.man: Bumped to version 4.3.1
	* comm.tcl:
	* pkgIndex.tcl:

	* comm.tcl: Implemented the new options -interp and -events,
	* comm.test: extended the testsuite to cover them. Created
	  utility/helper command for the execution of hook scripts, and
	  rewrote all hook places to use it.

2006-08-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm.man: Documented an easier use of slave interpreters
	  (-interp, -events).

2006-08-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* comm.test:      Moved startup and cleanup of slave process
	* comm.slaveboot: into a separate file.

2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
