@@ -5,10 +5,11 @@ set spawncode [makeFile {
     catch {wm withdraw .}
     ##puts [set fh [open ~/foo w]] $argv ; close $fh
 
-    source [lindex $argv 0].tcl ; # load 'comm'
+    source [lindex $argv 0]     ; # load 'snit'
+    source [lindex $argv 1].tcl ; # load 'comm'
     # and wait for commands. But first send our
     # own server socket to the initiator
-    ::comm::comm send [lindex $argv 1] [list slaveat [::comm::comm self]]
+    ::comm::comm send [lindex $argv 2] [list slaveat [::comm::comm self]]
     vwait forever
 } spawn]
 
@@ -21,9 +22,10 @@ proc slaveat {id} {
 #puts "self @ [::comm::comm self]"
 
 exec \
-	[info nameofexecutable] $spawncode \
-	[file rootname [info script]] \
-	[::comm::comm self] &
+    [info nameofexecutable] $spawncode \
+    [tcllibPath snit/snit.tcl] \
+    [file rootname [info script]] \
+    [::comm::comm self] &
 
 #puts "Waiting for spawned comm system to boot"
 # Wait for the slave to initialize itself.
