@@ -22,9 +22,10 @@
 #
 #	See the manual page comm.n for further details on this package.
 #
-# RCS: @(#) $Id: comm.tcl,v 1.23 2006/11/30 03:01:37 andreas_kupries Exp $
+# RCS: @(#) $Id: comm.tcl,v 1.24 2007/05/02 00:30:08 andreas_kupries Exp $
 
-package require Tcl 8.2
+package require Tcl 8.3
+package require snit ; # comm::future objects.
 
 namespace eval ::comm {
     namespace export comm comm_send
@@ -60,6 +61,7 @@ namespace eval ::comm {
     #	lastport		saves last default listening port allocated
     #	debug			enable debug output
     #	chans			list of allocated channels
+    #   future,fid,$fid         List of futures a specific peer is waiting for.
     #
     # Channel instance variables:
     # comm()
@@ -183,6 +185,54 @@ proc ::comm::comm_cmd_remoteid {chan args} {
 proc ::comm::comm_cmd_debug {chan bool} {
     variable comm
     return [set comm(debug) [string is true -strict $bool]]
+}
+
+# ### ### ### ######### ######### #########
+## API: Setup async result generation for a remotely invoked command.
+
+# (future,fid,<fid>) -> list (future)
+# (current,async)    -> bool (default 0) 
+# (current,state)    -> list (chan fid cmd ser)
+
+proc ::comm::comm_cmd_return_async {chan} {
+    variable comm
+
+    if {![info exists comm(current,async)]} {
+	return -code error "No remote commands processed yet"
+    }
+    if {$comm(current,async)} {
+	# Return the same future which were generated by the first
+	# call.
+	return $comm(current,state)
+    }
+
+    foreach {cmdchan cmdfid cmd ser} $comm(current,state) break
+
+    # Assert that the channel performing the request and the channel
+    # the current command came in are identical. Panic if not.
+
+    if {![string equal $chan $cmdchan]} {
+	return -code error "Internal error: Trying to activate\
+		async return for a command on a different channel"
+    }
+
+    # Establish the future for the command and return a handle for
+    # it. Remember the outstanding futures for a peer, so that we can
+    # cancel them if the peer is lost before the promise implicit in
+    # the future is redeemed.
+
+    set future [::comm::future %AUTO% $cmdfid $cmd $ser]
+
+    lappend comm(future,fid,$cmdfid) $future
+    set     comm(current,state)      $future
+
+    # Mark the current command as using async result return. We do
+    # this last to ensure that all errors in this method are reported
+    # through the regular channels.
+
+    set comm(current,async) 1
+
+    return $future
 }
 
 # hook --
@@ -960,6 +1010,10 @@ proc ::comm::commLostConn {chan fid reason} {
 
     set id $comm($chan,fids,$fid)
 
+    # Invoke the callbacks of all commands which have such and are
+    # still waiting for a response from the lost peer. Use an
+    # appropriate error.
+
     foreach s $comm($chan,pending,$id) {
 	if {[string equal "callback" [lindex $s end]]} {
 	    set ser [lindex $s 0]
@@ -972,7 +1026,7 @@ proc ::comm::commLostConn {chan fid reason} {
 			      -errorinfo "" \
 			      -result    $reason \
 			     ]
-		if {[catch {uplevel #0 $comm($chan,return,$ser) $args} err]} {
+		if {[catch {uplevel \#0 $comm($chan,return,$ser) $args} err]} {
 		    commBgerror $err
 		}
 	    }
@@ -985,6 +1039,13 @@ proc ::comm::commLostConn {chan fid reason} {
     unset comm($chan,fids,$fid)
     catch {unset comm($chan,peers,$id)}		;# race condition
     catch {unset comm($chan,buf,$fid)}
+
+    # Cancel all outstanding futures for requests which were made by
+    # the lost peer, if there are any. This does not destroy
+    # them. They will stay around until the long-running operations
+    # they belong too kill them.
+
+    CancelFutures $fid
 
     # process lost hook now
     catch {CommRunHook $chan lost}
@@ -1006,6 +1067,26 @@ proc ::comm::commBgerror {err} {
 	puts stderr "    Error in bgerror: $msg"
 	flush stderr
     }
+}
+
+# CancelFutures: Mark futures associated with a comm channel as
+# expired, done when the connection to the peer has been lost. The
+# marked futures will not generate result anymore. They will also stay
+# around until destroyed by the script they belong to.
+
+proc ::comm::CancelFutures {fid} {
+    variable comm
+    if {![info exists comm(future,fid,$fid)]} return
+
+    commDebug {puts stderr "\tCanceling futures: [join $comm(future,fid,$fid) \
+                         "\n\t                 : "]"}
+
+    foreach future $comm(future,fid,$fid) {
+	$future Cancel
+    }
+
+    unset comm(future,fid,$fid)
+    return
 }
 
 ###############################################################################
@@ -1093,10 +1174,13 @@ proc ::comm::commExec {chan fid remoteid buf} {
     set buffer [lindex $buf 0]
 
     # Save remoteid for "comm remoteid".  This will only be valid
-    # if retrieved before any additional events occur # on this channel.
+    # if retrieved before any additional events occur on this channel.
     # N.B. we could have already lost the connection to remote, making
     # this id be purely informational!
     set comm($chan,remoteid) [set id $remoteid]
+
+    # Save state for possible async result generation
+    AsyncPrepare $chan $fid $cmd $ser
 
     commDebug {puts stderr "<$chan> exec <$cmd,$ser,$buf>"}
 
@@ -1219,7 +1303,7 @@ proc ::comm::commExec {chan fid remoteid buf} {
 
 	if {$comm($chan,interp) == {}} {
 	    # Main interpreter
-	    set thecmd [concat [list uplevel #0] $buffer]
+	    set thecmd [concat [list uplevel \#0] $buffer]
 	    set err    [catch $thecmd ret]
 	} else {
 	    # Redirect execution into the configured slave
@@ -1229,7 +1313,7 @@ proc ::comm::commExec {chan fid remoteid buf} {
 	    set interp $comm($chan,interp)
 
 	    if {$comm($chan,interp,upl) == "ok"} {
-		set thecmd [concat [list uplevel #0] $buffer]
+		set thecmd [concat [list uplevel \#0] $buffer]
 		set err [catch {interp eval $interp $thecmd} ret]
 	    } elseif {$comm($chan,interp,aset) == "hidden"} {
 		set thecmd [linsert $buffer 0 interp invokehidden $interp uplevel \#0]
@@ -1239,6 +1323,31 @@ proc ::comm::commExec {chan fid remoteid buf} {
 	    }
 	}
     }
+
+    # Check and handle possible async result generation.
+    if {[AsyncCheck]} return
+
+    commSendReply $fid $cmd $ser $err $ret
+    return
+}
+
+# ::comm::commSendReply --
+#
+#	Internal command. Executed to construct and send the reply
+#	for a command.
+#
+# Arguments:
+#	fid		channel handle of the socket we are replying to.
+#	cmd		The type of request (send, command) we are replying to.
+#	ser		Serial number of the request the reply is for.
+#	err		result code to place into the reply.
+#	ret		result value to place into the reply.
+#
+# Results:
+#	None.
+
+proc ::comm::commSendReply {fid cmd ser err ret} {
+    variable comm
 
     commDebug {puts stderr "<$chan> res <$err,$ret> /$cmd"}
 
@@ -1271,7 +1380,6 @@ proc ::comm::commExec {chan fid remoteid buf} {
     commDebug {puts stderr "<$chan> exec complete"}
     return
 }
-
 
 proc ::comm::CommRunHook {chan event} {
     variable comm
@@ -1343,6 +1451,181 @@ proc ::comm::CommRunHook {chan event} {
     return
 }
 
+# ### ### ### ######### ######### #########
+## Hooks to link async return and future processing into the regular
+## system.
+
+# AsyncPrepare, AsyncCheck: Initialize state information for async
+# return upon start of a remote invokation, and checking the state for
+# async return.
+
+proc ::comm::AsyncPrepare {chan fid cmd ser} {
+    variable comm
+    set comm(current,async) 0
+    set comm(current,state) [list $chan $fid $cmd $ser]
+    return
+}
+
+proc ::comm::AsyncCheck {} {
+    # Check if the executed command notified us of an async return. If
+    # not we let the regular return processing handle the end of the
+    # script. Otherwise we stop the caller from proceeding, preventing
+    # a regular return.
+
+    variable comm
+    if {!$comm(current,async)} {return 0}
+    return 1
+}
+
+# FutureDone: Action taken by an uncanceled future to deliver the
+# generated result to the proper invoker. This also removes the future
+# from the list of pending futures for the comm channel.
+
+proc comm::FutureDone {future fid cmd sid rcode rvalue} {
+    variable comm
+    commSendReply $fid $cmd $sid $rcode $rvalue
+
+    set pos [lsearch -exact $comm(future,fid,$fid) $future]
+    set comm(future,fid,$fid) [lreplace $comm(future,fid,$fid) $pos $pos]
+    return
+}
+
+# ### ### ### ######### ######### #########
+## Hooks to save command state across nested eventloops a remotely
+## invoked command may run before finally activating async result
+## generation.
+
+# DANGER !! We have to refer to comm internals using fully-qualified
+# names because the wrappers will execute in the global namespace
+# after their installation.
+
+proc ::comm::Vwait {varname} {
+    variable ::comm::comm
+
+    set hasstate [info exists comm(current,async)]
+    if {$hasstate} {
+	set chan     [lindex $comm(current,state) 0]
+	set async    $comm(current,async)
+	set state    $comm(current,state)
+	set remoteid $comm($chan,remoteid)
+    }
+
+    set code [catch {uplevel 1 ::comm::VwaitOrig $varname} res]
+
+    if {$hasstate} {
+	set comm(current,async)  $async
+	set comm(current,state)	 $state
+	set comm($chan,remoteid) $remoteid
+    }
+
+    return -code $code $res
+}
+
+proc ::comm::Update {varname} {
+    variable ::comm::comm
+
+    set hasstate [info exists comm(current,async)]
+    if {$hasstate} {
+	set chan     [lindex $comm(current,state) 0]
+	set async    $comm(current,async)
+	set state    $comm(current,state)
+	set remoteid $comm($chan,remoteid)
+    }
+
+    set code [catch {uplevel 1 ::comm::UpdateOrig $varname} res]
+
+    if {$hasstate} {
+	set comm(current,async)  $async
+	set comm(current,state)	 $state
+	set comm($chan,remoteid) $remoteid
+    }
+
+    return -code $code $res
+}
+
+# Install the wrappers.
+
+proc ::comm::InitWrappers {} {
+    rename ::vwait       ::comm::VwaitOrig
+    rename ::comm::Vwait ::vwait
+
+    rename ::update       ::comm::UpdateOrig
+    rename ::comm::Update ::update
+
+    proc ::comm::InitWrappers {} {}
+    return
+}
+
+# ### ### ### ######### ######### #########
+## API: Future objects.
+
+snit::type comm::future {
+    option -command -default {}
+
+    constructor {fid cmd ser} {
+	set xfid $fid
+	set xcmd $cmd
+	set xser $ser
+	return
+    }
+
+    destructor {
+	if {!$canceled} {
+	    return -code error \
+		    "Illegal attempt to destroy unresolved future \"$self\""
+	}
+    }
+
+    method return {args} {
+	# Syntax:             | 0
+	#       : -code x     | 2
+	#       : -code x val | 3
+	#       :         val | 4
+	# Allowing multiple -code settings, last one is taken.
+
+	set rcode  0
+	set rvalue {}
+
+	while {[lindex $args 0] == "-code"} {
+	    set rcode [lindex $args 1]
+	    set args  [lrange $args 2 end]
+	}
+	if {[llength $args] > 1} {
+	    return -code error "wrong\#args, expected \"?-code errcode? ?result?\""
+	}
+	if {[llength $args] == 1} {
+	    set rvalue [lindex $args 0]
+	}
+
+	if {!$canceled} {
+	    comm::FutureDone $self $xfid $xcmd $xser $rcode $rvalue
+	    set canceled 1
+	}
+	# assert: canceled == 1
+	$self destroy
+	return
+    }
+
+    variable xfid {}
+    variable xcmd {}
+    variable xser {}
+    variable canceled 0
+
+    # Internal method for use by comm channels. Marks the future as
+    # expired, no peer to return a result back to.
+
+    method Cancel {} {
+	set canceled 1
+	if {![llength $options(-command)]} {return}
+	uplevel #0 [linsert $options(-command) end $self]
+	return
+    }
+}
+
+# ### ### ### ######### ######### #########
+## Setup
+::comm::InitWrappers
+
 ###############################################################################
 #
 # Finish creating "comm" using the default port for this interp.
@@ -1360,4 +1643,4 @@ if {![info exists ::comm::comm(comm,port)]} {
 }
 
 #eof
-package provide comm 4.4.1
+package provide comm 4.5
