@@ -1,2 +1,2 @@
-if {![package vsatisfies [package provide Tcl] 8]} {return}
-package ifneeded comm 4.4.1 [list source [file join $dir comm.tcl]]
+if {![package vsatisfies [package provide Tcl] 8.3]} {return}
+package ifneeded comm 4.5 [list source [file join $dir comm.tcl]]
